# HeroPricingBot

./: Cargo.toml  README.md
src/: comparisonQuery.graphql  comparison_query.graphql  main.rs  query.graphql  schema.graphql
