[package]
name = "hpb_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1.14.0", features = ["full"] }
graphql_client = "0.10.0"
# These three below are for json serialization and deserialization
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
# For making http requests
reqwest = {version = "0.11.0", features = ["json"]}
# Error handling crate
anyhow = "1.0.39"
# for big int support
num-bigint = {version = "0.4", features = ["serde"]}
